language/move-lang/tests/move_check/typing/assign_pop_resource.exp
error: 

   ┌── tests/move_check/typing/assign_pop_resource.move:5:9 ───
   │
 5 │         _ = R{};
   │         ^ Cannot ignore resource values. The value must be used
   ·
 5 │         _ = R{};
   │             --- The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/assign_pop_resource.move:6:10 ───
   │
 6 │         (_, _) = (R{}, R{});
   │          ^ Cannot ignore resource values. The value must be used
   ·
 6 │         (_, _) = (R{}, R{});
   │                   --- The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/assign_pop_resource.move:6:13 ───
   │
 6 │         (_, _) = (R{}, R{});
   │             ^ Cannot ignore resource values. The value must be used
   ·
 6 │         (_, _) = (R{}, R{});
   │                        --- The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

